Fixed HTTP actions class sonar lint exception and depriciated class issues