@@ -6,6 +6,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.ProtocolException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Map;
 
@@ -15,7 +16,7 @@ public class HTTPActions {
 
     public HTTPActions (String url){
         try {
-            this.url = new URL(url);
+            this.url = URI.create(url).toURL();
             this.connection = (HttpURLConnection) this.url.openConnection();
         } catch (Exception e) {
             Loggers.getLogger().error("Failed to create HTTP connection");
@@ -70,7 +71,8 @@ public class HTTPActions {
             try {
                 return connection.getErrorStream();
             } catch (Exception ex) {
-                throw new RuntimeException("No response stream available", ex);
+                Loggers.getLogger().error("Not handled error ",ex);
+                return null;
             }
         }
     }
